Makefile buffer.c dochangelog main.c mcvs.h sstrcpy.c  	sstrcpy.h xmalloc.c  	env_vars.c env_vars.h hash.h main.cvs strip_path.c  	strip_path.h

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,15 +1,57 @@
-all: minicvs
+#
+#  $Id$
+#
+#  Copyright (c) 2002 Nicola Bonelli <bonelli@antifork.org>
+#                     Roberto Ferranti <sbirish@sbirish.net>
+#		      Giorgio Zoppi <deneb@penguin.it>
+#
+#  All rights reserved.
+#
+#  Redistribution and use in source and binary forms, with or without
+#  modification, are permitted provided that the following conditions are
+#  met: 1. Redistributions of source code must retain the above copyright
+#  notice, this list of conditions and the following disclaimer. 2.
+#  Redistributions in binary form must reproduce the above copyright notice,
+#  this list of conditions and the following disclaimer in the documentation
+#  and/or other materials provided with the distribution.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND ANY
+#  EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+#  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+#  DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR OR CONTRIBUTORS BE LIABLE FOR
+#  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+#  DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+#  SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
+#  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
+#  LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
+#  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+#  SUCH DAMAGE.
+#
+#
 
-CC = gcc
-CFLAGS = -g -Wall
-INCLUDE = . 
-OBJECTS = strlcpy.o xmalloc.o valloc.o root.o  buffer.o
-HEADERS = mcvs.h strlcpy.h xmalloc.h valloc.h buffer.h
+CC      = gcc
+DEBUG   = # -DEADBUG 
+CFLAGS  = -g -static -Wall -I. 
 
-.c.o:  $(HEADERS) -lz
-#-lpthread
-minicvs:  $(OBJECTS) $(HEADERS)
-	gcc -o $@ $(OBJECTS) -lz 
-#-lpthread
+INSTALL = /usr/bin/ginstall -c 
+
+OBJS    = strlcpy.o sstrcpy.o xmalloc.o env_vars.o strip_path.o main.o
+
+.c.o:
+	$(CC) $(CFLAGS) $(DEBUG) -c $< -o $@ 
+
+all:  global 
+	$(CC) -o minicvs $(OBJS) $(LINUX) 	
+
+openbsd:  global
+	$(CC) -o minicvs $(OBJS) $(OPENBSD)
+
+freebsd:  global
+	$(CC) -o minicvs $(OBJS) $(FREEBSD)
+
+global: $(OBJS)
+
+install:
+	$(INSTALL) -c -m 0755 -g bin minicvs /bin
 clean:
-	rm -fr *.o minicvs
+	rm -Rf *~ minicvs *.o 
